--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'net.danlew:android.joda:2.9.9.4'
+    implementation 'com.robinhood.ticker:ticker:2.0.0'
+
 }
