--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'net.danlew:android.joda:2.9.9.4'
     implementation 'com.robinhood.ticker:ticker:2.0.0'
+    implementation 'com.github.drawers:SpinnerDatePicker:1.0.6'
+
 
 }
