--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,13 @@ android {
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "8.26.2018"
+        resConfigs("en", "iw")
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -23,4 +25,6 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'net.danlew:android.joda:2.9.9.4'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.startapp:inapp-sdk:3.10.1'
+
 }
