--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,16 @@
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/'}
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.11.2, 0.99.99]'
+    }
+}
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
+repositories {
+    maven { url 'https://maven.google.com' }
+}
 apply plugin: 'com.android.application'
 
 android {
@@ -6,9 +19,14 @@ android {
         applicationId "com.aviparshan.pazamcount"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "8.26.2018"
+        versionCode 2
+        versionName "8.27.2018"
         resConfigs("en", "iw")
+        manifestPlaceholders = [
+                onesignal_app_id: '09a33c2f-2829-4480-9de2-12857e4a920c',
+                // Project number pulled from dashboard, local value is ignored.
+                onesignal_google_project_number: 'REMOTE'
+        ]
     }
     buildTypes {
         release {
@@ -26,5 +44,7 @@ dependencies {
     implementation 'net.danlew:android.joda:2.9.9.4'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.startapp:inapp-sdk:3.10.1'
+    implementation 'com.onesignal:OneSignal:[3.9.2, 3.99.99]'
+
 
 }
