--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.aviparshan.pazamcount">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
+
     <application
         android:name=".ApplicationClass"
         android:icon="@mipmap/ic_launcher"
@@ -26,7 +22,8 @@
         </activity>
         <activity
             android:name=".Results"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            tools:ignore="MissingPrefix">
         </activity>
 
     </application>
